@@ -2513,10 +2513,10 @@ public class GuiUtils extends LayoutUtil {
             }
             try {
                 int start =
-                    new Integer(intervalStartFld.getText().trim()).intValue()
+                    Integer.parseInt(intervalStartFld.getText().trim())
                     - 1;
                 int step =
-                    new Integer(intervalStepFld.getText().trim()).intValue();
+                    Integer.parseInt(intervalStepFld.getText().trim());
                 list.clearSelection();
                 for (int idx = start; idx < size; idx += step) {
                     list.addSelectionInterval(idx, idx);
@@ -3402,13 +3402,13 @@ public class GuiUtils extends LayoutUtil {
         final JTextField field    = new JTextField(((initValue == null)
                 ? ""
                 : initValue), fieldWidth);
-        ObjectListener   listener = new ObjectListener(new Boolean(false)) {
+        ObjectListener   listener = new ObjectListener(Boolean.valueOf(false)) {
             public void actionPerformed(ActionEvent ae) {
                 String cmd = ae.getActionCommand();
                 if ((ae.getSource() == field) || cmd.equals(CMD_OK)) {
-                    theObject = new Boolean(true);
+                    theObject = Boolean.valueOf(true);
                 } else {
-                    theObject = new Boolean(false);
+                    theObject = Boolean.valueOf(false);
                 }
                 dialog.setVisible(false);
             }
@@ -3668,7 +3668,7 @@ public class GuiUtils extends LayoutUtil {
             box.setEditable(true);
         }
         box.setActionCommand(command);
-        box.setSelectedItem(new Integer(initValue));
+        box.setSelectedItem(Integer.valueOf(initValue));
         //Add the listener at the end so we don't get the event
         //fired from the prior setSelectedItem
         box.addActionListener(listener);
@@ -4732,9 +4732,9 @@ public class GuiUtils extends LayoutUtil {
                     } else {
                         theMethod.invoke(object, ((arg == null)
                                 ? new Object[] {
-                                    new Boolean(cbx.isSelected()) }
+                                    Boolean.valueOf(cbx.isSelected()) }
                                 : new Object[] {
-                                    new Boolean(cbx.isSelected()),
+                                    Boolean.valueOf(cbx.isSelected()),
                                     arg }));
                     }
                 } catch (Exception exc) {
@@ -4779,7 +4779,7 @@ public class GuiUtils extends LayoutUtil {
                         try {
                             theMethod.invoke(object,
                                              new Object[] {
-                                                 new Integer(theIndex) });
+                                                 Integer.valueOf(theIndex) });
                         } catch (Exception exc) {
                             System.err.println("Error in makeCheckbox:"
                                     + exc);
@@ -5176,7 +5176,7 @@ public class GuiUtils extends LayoutUtil {
                                          int current) {
         List      l        = TwoFacedObject.createList(values, labels);
         JComboBox box      = new JComboBox(new Vector(l));
-        Object    selected = TwoFacedObject.findId(new Integer(current), l);
+        Object    selected = TwoFacedObject.findId(Integer.valueOf(current), l);
         if (selected != null) {
             box.setSelectedItem(selected);
         }
@@ -5261,7 +5261,7 @@ public class GuiUtils extends LayoutUtil {
                     int value = slider.getValue();
                     try {
                         theMethod.invoke(listener,
-                                         new Object[] { new Integer(value) });
+                                         new Object[] { Integer.valueOf(value) });
                     } catch (Exception exc) {
                         System.err.println("Error invoking method" + exc);
                         exc.printStackTrace();
@@ -5341,7 +5341,7 @@ public class GuiUtils extends LayoutUtil {
         int[]  fontSizes    = GuiUtils.FONT_SIZES;
         Vector fontSizeList = new Vector();
         for (int i = 0; i < FONT_SIZES.length; i++) {
-            fontSizeList.add(new Integer(FONT_SIZES[i]));
+            fontSizeList.add(Integer.valueOf(FONT_SIZES[i]));
         }
         return fontSizeList;
     }
@@ -6162,7 +6162,7 @@ public class GuiUtils extends LayoutUtil {
      */
     public static JComboBox doMakeFontSizeBox(int size) {
         JComboBox fontSizeBox = new JComboBox(GuiUtils.getFontSizeList());
-        fontSizeBox.setSelectedItem(new Integer(size));
+        fontSizeBox.setSelectedItem(Integer.valueOf(size));
         return fontSizeBox;
     }
 
@@ -6766,7 +6766,7 @@ public class GuiUtils extends LayoutUtil {
         Node n = attrs.getNamedItem(name);
         return ((n == null)
                 ? dflt
-                : new Boolean(n.getNodeValue()).booleanValue());
+                : Boolean.parseBoolean(n.getNodeValue()));
     }
 
     /**
